@@ -34,42 +34,12 @@ name|java
 operator|.
 name|io
 operator|.
-name|InputStream
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|io
-operator|.
-name|BufferedReader
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|io
-operator|.
-name|InputStreamReader
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|io
-operator|.
 name|*
 import|;
 end_import
 
 begin_comment
-comment|/**  * Dictionary represented by a file text.  *   *<p/>Format allowed: 1 word per line:<br/>  * word1<br/>  * word2<br/>  * word3<br/>  *  * @author Nicolas Maisonneuve  */
+comment|/**  * Dictionary represented by a text file.  *   *<p/>Format allowed: 1 word per line:<br/>  * word1<br/>  * word2<br/>  * word3<br/>  *  * @author Nicolas Maisonneuve  */
 end_comment
 
 begin_class
@@ -136,6 +106,24 @@ name|InputStreamReader
 argument_list|(
 name|dictFile
 argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+comment|/**    * Create a dictionary based on a reader. Used by the test case.    */
+DECL|method|PlainTextDictionary
+specifier|protected
+name|PlainTextDictionary
+parameter_list|(
+name|Reader
+name|reader
+parameter_list|)
+block|{
+name|in
+operator|=
+operator|new
+name|BufferedReader
+argument_list|(
+name|reader
 argument_list|)
 expr_stmt|;
 block|}
@@ -208,18 +196,13 @@ name|IOException
 name|ex
 parameter_list|)
 block|{
+throw|throw
+operator|new
+name|RuntimeException
+argument_list|(
 name|ex
-operator|.
-name|printStackTrace
-argument_list|()
-expr_stmt|;
-name|line
-operator|=
-literal|null
-expr_stmt|;
-return|return
-literal|false
-return|;
+argument_list|)
+throw|;
 block|}
 return|return
 operator|(
@@ -238,7 +221,13 @@ specifier|public
 name|void
 name|remove
 parameter_list|()
-block|{     }
+block|{
+throw|throw
+operator|new
+name|UnsupportedOperationException
+argument_list|()
+throw|;
+block|}
 block|}
 block|}
 end_class
