@@ -1,5 +1,6 @@
 <html><head></head>
 <body>
 Suggest alternate spellings for words.
+Also see <a href="http://wiki.apache.org/jakarta-lucene/SpellChecker">the spell checker Wiki page</a>.
 </body>
 </html>
